Rename compact cert (#3984)
* rename compcat cert to stateproof in transcation and blockheader

* rename stateproof package to stateproof msg

* rename cc on header

* change txn type and rename ledger state

* rename compact cert type

* ledger renaming

* rename compactcert package

* rename crypto cert package

* more rename

* complete crypto rename + swagger

* rename cc e2e test

* rename hash id

* more renaming

* fix comments and names
