# daemon/algod/api/swagger.json
@@ -1247,30 +1247,9 @@
         "round",
         "period",
         "txnRoot",
-        "timestamp",
-        "compactCertVoters",
-        "compactCertVotersTotal",
-        "compactCertNextRound"
+        "timestamp"
       ],
       "properties": {
-        "compactCertNextRound": {
-          "description": "CompactCertNextRound is the next round for which a compact certificate is\nexpected.",
-          "type": "integer",
-          "format": "uint64",
-          "x-go-name": "CompactCertNextRound"
-        },
-        "compactCertVoters": {
-          "description": "CompactCertVoters is the root of the merkle tree of voters for compact certs.",
-          "type": "string",
-          "format": "byte",
-          "x-go-name": "CompactCertVoters"
-        },
-        "compactCertVotersTotal": {
-          "description": "CompactCertVotersTotal is the total amount of microalgos held by the voters in\nthe CompactCertVoters merkle tree.",
-          "type": "integer",
-          "format": "uint64",
-          "x-go-name": "CompactCertVotersTotal"
-        },
         "currentProtocol": {
           "description": "CurrentProtocol is a string that represents the current protocol",
           "type": "string",
@@ -1417,36 +1396,6 @@
         }
       },
       "x-go-package": "github.com/algorand/go-algorand/daemon/algod/api/spec/common"
-    },
-    "CompactCertTransactionType": {
-      "description": "CompactCertTransactionType contains the additional fields for a compact cert transaction",
-      "type": "object",
-      "required": [
-        "rnd",
-        "cert",
-        "certmsg"
-      ],
-      "properties": {
-        "cert": {
-          "description": "Cert is the msgpack encoding of the compact cert.",
-          "type": "string",
-          "format": "byte",
-          "x-go-name": "Cert"
-        },
-        "certmsg": {
-          "description": "CertMsg is the msgpack encoding of the state proof message.",
-          "type": "string",
-          "format": "byte",
-          "x-go-name": "CertMsg"
-        },
-        "rnd": {
-          "description": "CertIntervalLatestRound is the latest round in the interval this compact cert attests to.",
-          "type": "integer",
-          "format": "uint64",
-          "x-go-name": "CertIntervalLatestRound"
-        }
-      },
-      "x-go-package": "github.com/algorand/go-algorand/daemon/algod/api/spec/v1"
     },
     "KeyregTransactionType": {
       "description": "KeyregTransactionType contains the additional fields for a keyreg Transaction",
@@ -1661,6 +1610,36 @@
       },
       "x-go-package": "github.com/algorand/go-algorand/daemon/algod/api/spec/v1"
     },
+    "StateProofTransactionType": {
+      "description": "StateProofTransactionType contains the additional fields for a state proof transaction",
+      "type": "object",
+      "required": [
+        "sprnd",
+        "sp",
+        "spmsg"
+      ],
+      "properties": {
+        "sp": {
+          "description": "StateProof is the msgpack encoding of the state proof.",
+          "type": "string",
+          "format": "byte",
+          "x-go-name": "StateProof"
+        },
+        "spmsg": {
+          "description": "StateProofMessage is the msgpack encoding of the state proof message.",
+          "type": "string",
+          "format": "byte",
+          "x-go-name": "StateProofMessage"
+        },
+        "sprnd": {
+          "description": "StateProofIntervalLatestRound is the latest round in the interval this state proof attests to.",
+          "type": "integer",
+          "format": "uint64",
+          "x-go-name": "StateProofIntervalLatestRound"
+        }
+      },
+      "x-go-package": "github.com/algorand/go-algorand/daemon/algod/api/spec/v1"
+    },
     "StateSchema": {
       "description": "swagger: model StateSchema",
       "type": "object",
@@ -1726,16 +1705,13 @@
         "first-round",
         "last-round",
         "app",
-        "compactcert",
+        "sp",
         "genesisID",
         "genesishashb64"
       ],
       "properties": {
         "app": {
           "$ref": "#/definitions/ApplicationCallTransactionType"
-        },
-        "compactcert": {
-          "$ref": "#/definitions/CompactCertTransactionType"
         },
         "curcfg": {
           "$ref": "#/definitions/AssetConfigTransactionType"
@@ -1820,6 +1796,9 @@
           "type": "integer",
           "format": "uint64",
           "x-go-name": "ConfirmedRound"
+        },
+        "sp": {
+          "$ref": "#/definitions/StateProofTransactionType"
         },
         "tx": {
           "description": "TxID is the transaction ID",
